# ACP-DCA

ACP-DCA_IF-SPECK/IF-SPECK32/affine/: CMakeLists.txt  README.md  Result_IF-SPECK32.txt
ACP-DCA_IF-SPECK/IF-SPECK32/affine/test/: white_box_arx.c
ACP-DCA_IF-SPECK/IF-SPECK32/quadratic/: README.md
ACP-DCA_IF-SPECK/IF-SPECK32/quadratic/test/: white_box_arx.c
ACP-DCA_IF-SPECK/IF-SPECK64/affine/: README.md  Result_IF-SPECK64.txt
ACP-DCA_IF-SPECK/IF-SPECK64/affine/test/: white_box_arx.c
ACP-DCA_IF-SPECK/IF-SPECK64/quadratic/: README.md  Result_IF-SPECK64.txt
ACP-DCA_IF-SPECK/IF-SPECK64/quadratic/test/: white_box_arx.c
ACP-DCA_SE-SPECK/SE-SPECK128/: README.md  Result_SE-SPECK128.txt  default_white_box_speck_128_K256.c
ACP-DCA_SE-SPECK/SE-SPECK32/: README.md  Result_SE-SPECK32.txt  default_white_box_speck_32_K64.c
ACP-DCA_SE-SPECK/SE-SPECK64/: README.md  Result_SE-SPECK64.txt  default_white_box_speck_64_K128.c
ACP-DCA_Simulation/: CMakeLists.txt  README.md  Result_SPECK128.txt  Result_SPECK32.txt  Result_SPECK64.txt
ACP-DCA_Simulation/include/: wbspeck.h
ACP-DCA_Simulation/src/: wbspeck.c
ACP-DCA_Simulation/test/: attack.c
